# neonatox-nhopkg

./: .gitignore  AUTHORS  BUGS  ChangeLog  DONE.md  Makefile.am  Makefile.in  NEWS  README  README.html  README.md  TODO  TODO.md  aclocal.m4  autogen.sh  configure  configure.ac  meson.build  meson_options.txt
data/: Makefile.am  Makefile.in  meson.build  nhoget.8.in  nhopkg-overlay.8.in  nhopkg-repos.8.in  nhopkg-src.8.in  nhopkg.8.in  nhopkg.conf.5.in  nhouser.8.in  x-nho.xml
data/pixmaps/: Makefile.am  Makefile.in  meson.build
data/trusted-keys/: nhopkg-repo.pub
docs/: README.md  actualizaciones.md  arquitectura.md  comandos.md  configuracion.md  construccion.md  dependencias.md  formato-nhoid.md  grupos.md  i18n.md  mantenimiento.md  nhoget.md  nhopkg-src.md  produccion.md  proximos-pasos.md  repositorios.md  seguridad.md  usuarios-servicios.md
docs/es/: README.md  actualizaciones.md  arquitectura.md  comandos.md  configuracion.md  construccion.md  dependencias.md  formato-nhoid.md  grupos.md  i18n.md  mantenimiento.md  nhoget.md  nhopkg-src.md  produccion.md  proximos-pasos.md  repositorios.md  seguridad.md  usuarios-servicios.md
docs/html/en/: README.html  actualizaciones.html  arquitectura.html  comandos.html  configuracion.html  construccion.html  formato-nhoid.html  grupos.html  mantenimiento.html  produccion.html  proximos-pasos.html  repositorios.html  seguridad.html  usuarios-servicios.html
docs/html/es/: README.html  actualizaciones.html  arquitectura.html  comandos.html  configuracion.html  construccion.html  formato-nhoid.html  grupos.html  mantenimiento.html  produccion.html  proximos-pasos.html  repositorios.html  seguridad.html  usuarios-servicios.html
docs/pt_BR/: README.md  arquitetura.md  atualizacoes.md  comandos.md  configuracao.md  construcao.md  dependencias.md  formato-nhoid.md  grupos.md  i18n.md  manutencao.md  nhoget.md  nhopkg-src.md  producao.md  proximos-passos.md  repositorios.md  seguranca.md  usuarios-servicos.md
po/: ChangeLog  LINGUAS  Makefile.in.in  POTFILES.in  ca.po  es.po  es_ES.po  fr.po  meson.build  nhopkg.pot  pt_BR.po  ru_RU.po
scripts/: update-translations.sh
src/: Makefile.am  Makefile.in  libnhopkg.in  libnhopkg_crypto.in  libnhopkg_download.in  libnhopkg_nhouser.in  libnhopkg_udepsys.in  meson.build  nhoget.in  nhopkg-overlay.in  nhopkg-repos.in  nhopkg-src.in  nhopkg.conf.in  nhopkg.in  nhouser.in  test.patch
src/legacy/: 001-autopackage.patch  002-tgz2nho.patch  003-create-source.patch
