option('binlocate',
  type: 'combo',
  choices: ['plocate', 'locate'],
  value: 'plocate',
  description: 'File search tool'
)

option('repo-url',
  type: 'string',
  value: 'https://neonatox.vegnux.com/repo/n2025/x86_64',
  description: 'Default repository URL'
)

option('git-url',
  type: 'string',
  value: 'https://gitlab.com/neonatox-sources',
  description: 'Default GIT source repository URL'
)
